--- a/songbird/style.css
+++ b/songbird/style.css
@@ -110,4 +110,70 @@ body {
           align-items: center;
   /* end */
 }
+
+.header-container .bottom-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1400px;
+  width: 100%;
+  height: 40px;
+  margin: 0 auto;
+  padding-left: 10px;
+}
+
+.header-container .bottom-header .nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1380px;
+  width: 100%;
+}
+
+.header-container .bottom-header .nav .nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 auto;
+  list-style: none;
+}
+
+.header-container .bottom-header .nav .nav-list .nav-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 230px;
+  margin: 0 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+  background-color: #1b7571;
+}
+
+.header-container .bottom-header .nav .nav-list .nav-item .nav-link {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  color: #FFFFFF;
+  text-decoration: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.header-container .bottom-header .nav .nav-list .nav-item .nav-link:hover {
+  color: black;
+}
+
+.header-container .bottom-header .nav .nav-list .nav-item:hover {
+  background-color: #58A9A5;
+}
 /*# sourceMappingURL=style.css.map */
