--- a/songbird/style.scss
+++ b/songbird/style.scss
@@ -90,4 +90,54 @@ body {
             // border: 2px solid violet;
         }
     }
+    .bottom-header {
+        display: flex;
+        max-width: 1400px;
+        width: 100%;
+        height: 40px;
+        margin: 0 auto;
+        padding-left: 10px;
+        // border: 1px solid blue;
+        .nav {
+            display: flex;
+            max-width: 1380px;
+            width: 100%;
+            .nav-list {
+                display: flex;
+                margin: 0 auto;
+                list-style: none;
+                // border: 1px solid red;
+                .nav-item {
+                    display: flex;
+                    width: 230px;
+                    margin: 0 auto;
+                    justify-content: center;
+                    align-items: center;
+                    transition: 0.5s;
+                    cursor: pointer;
+                    background-color: $color-turquoise;
+                    // border: 1px solid blue;
+                    .nav-link {
+                        font-family: 'Roboto', sans-serif;
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 16px;
+                        line-height: 22px;
+                        color: #FFFFFF;
+                        text-decoration: none;
+                        transition: 0.5s;
+                        cursor: pointer;
+                    }
+                    .nav-link:hover {
+                        color: black;
+                    }
+                }
+                .nav-item:hover {
+                    background-color: #58A9A5;
+                }
+            }
+        }
+    }
 }
+
+
