--- a/songbird/style.css
+++ b/songbird/style.css
@@ -176,4 +176,58 @@ body {
 .header-container .bottom-header .nav .nav-list .nav-item:hover {
   background-color: #58A9A5;
 }
+
+/*Footer*/
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1600px;
+  width: 100%;
+  min-height: 80px;
+}
+
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer-container .github-link {
+  width: 60px;
+  height: 20px;
+  margin-left: 20px;
+  background-image: url("./assets/github.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.footer-container .year {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.footer-container .rss-link {
+  width: 130px;
+  height: 45px;
+  margin-right: 20px;
+  background-image: url("./assets/rs_school_js.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
 /*# sourceMappingURL=style.css.map */
