--- a/songbird/style.css
+++ b/songbird/style.css
@@ -119,14 +119,13 @@ body {
   width: 100%;
   height: 40px;
   margin: 0 auto;
-  padding-left: 10px;
 }
 
 .header-container .bottom-header .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 1380px;
+  max-width: 1400px;
   width: 100%;
 }
 
@@ -134,6 +133,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-width: 1400px;
+  width: 100%;
   margin: 0 auto;
   list-style: none;
 }
@@ -229,5 +230,33 @@ body {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   cursor: pointer;
+}
+
+/*MEDIA MAX-WIDTH: 850px*/
+@media (max-width: 1400px) {
+  /* HEADER */
+  .header {
+    max-width: 1400px;
+  }
+  .header-container .top-header {
+    max-width: 1200px;
+    padding-left: 0px;
+  }
+  .header-container .bottom-header {
+    max-width: 1200px;
+  }
+  .header-container .bottom-header .nav {
+    max-width: 1200px;
+  }
+  .header-container .bottom-header .nav .nav-list {
+    max-width: 1200px;
+  }
+  /*Footer*/
+  .footer {
+    max-width: 1400px;
+  }
+  .footer-container {
+    max-width: 1200px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
