--- a/songbird/style.scss
+++ b/songbird/style.scss
@@ -49,7 +49,6 @@ body {
     margin: 0 auto;
     // background-color: #000;
     // border: 1px solid green;
-
 }
 
 .header-container {
@@ -96,14 +95,16 @@ body {
         width: 100%;
         height: 40px;
         margin: 0 auto;
-        padding-left: 10px;
+        // padding-left: 10px;
         // border: 1px solid blue;
         .nav {
             display: flex;
-            max-width: 1380px;
+            max-width: 1400px;
             width: 100%;
             .nav-list {
                 display: flex;
+                max-width: 1400px;
+                width: 100%;
                 margin: 0 auto;
                 list-style: none;
                 // border: 1px solid red;
@@ -184,6 +185,42 @@ body {
         transition: 0.5s;
         cursor: pointer;
         // border: 1px solid red;
+    }
+}
+
+/*MEDIA MAX-WIDTH: 850px*/
+@media (max-width: 1400px) {
+
+    /* HEADER */ 
+    .header {
+        max-width: 1400px;
+    }
+
+    .header-container {
+        .top-header {
+            max-width: 1200px;
+            padding-left: 0px;
+            // border: 2px solid violet;
+        }
+        .bottom-header {
+            max-width: 1200px;
+            .nav {
+                max-width: 1200px;
+                .nav-list {
+                    max-width: 1200px;
+                }
+            }
+        }
+    }
+
+    /*Footer*/
+    .footer {
+        max-width: 1400px;
+        // border: 1px solid red;
+    }
+
+    .footer-container {
+        max-width: 1200px;
     }
 }
 
