--- a/songbird/style.scss
+++ b/songbird/style.scss
@@ -188,7 +188,7 @@ body {
     }
 }
 
-/*MEDIA MAX-WIDTH: 850px*/
+/*MEDIA MAX-WIDTH: 1400px*/
 @media (max-width: 1400px) {
 
     /* HEADER */ 
@@ -224,4 +224,38 @@ body {
     }
 }
 
+/*MEDIA MAX-WIDTH: 1200px*/
+@media (max-width: 1200px) {
 
+    /* HEADER */ 
+    .header {
+        max-width: 1200px;
+    }
+
+    .header-container {
+        .top-header {
+            max-width: 1000px;
+            padding-left: 0px;
+            // border: 2px solid violet;
+        }
+        .bottom-header {
+            max-width: 1000px;
+            .nav {
+                max-width: 1000px;
+                .nav-list {
+                    max-width: 1000px;
+                }
+            }
+        }
+    }
+
+    /*Footer*/
+    .footer {
+        max-width: 1200px;
+        // border: 1px solid red;
+    }
+
+    .footer-container {
+        max-width: 1000px;
+    }
+}
