--- a/songbird/style.css
+++ b/songbird/style.css
@@ -81,6 +81,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  border: 2px solid violet;
 }
 
 .header-container .top-header .logo {
@@ -119,6 +120,7 @@ body {
   width: 100%;
   height: 40px;
   margin: 0 auto;
+  border: 1px solid blue;
 }
 
 .header-container .bottom-header .nav {
@@ -127,6 +129,7 @@ body {
   display: flex;
   max-width: 1400px;
   width: 100%;
+  border-radius: 25px;
 }
 
 .header-container .bottom-header .nav .nav-list {
@@ -144,6 +147,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   width: 230px;
+  height: 40px;
   margin: 0 auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -155,6 +159,7 @@ body {
   transition: 0.5s;
   cursor: pointer;
   background-color: #1b7571;
+  border-radius: 10px;
 }
 
 .header-container .bottom-header .nav .nav-list .nav-item .nav-link {
@@ -293,19 +298,65 @@ body {
   /* HEADER */
   .header {
     max-width: 1050px;
+    height: 200px;
   }
   .header-container .top-header {
     max-width: 800px;
     padding-left: 0px;
   }
+  .header-container .top-header .logo {
+    margin-top: 20px;
+  }
   .header-container .bottom-header {
     max-width: 800px;
+    height: 80px;
   }
   .header-container .bottom-header .nav {
     max-width: 800px;
   }
   .header-container .bottom-header .nav .nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     max-width: 800px;
+  }
+  .header-container .bottom-header .nav .nav-list .nav-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 230px;
+    height: 35px;
+    margin: 0 auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    cursor: pointer;
+    background-color: #1b7571;
+  }
+  .header-container .bottom-header .nav .nav-list .nav-item .nav-link {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+    text-decoration: none;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+  .header-container .bottom-header .nav .nav-list .nav-item .nav-link:hover {
+    color: black;
+  }
+  .header-container .bottom-header .nav .nav-list .nav-item:hover {
+    background-color: #58A9A5;
   }
   /*Footer*/
   .footer {
@@ -313,6 +364,34 @@ body {
   }
   .footer-container {
     max-width: 800px;
+  }
+}
+
+/*MEDIA MAX-WIDTH: 850px*/
+@media (max-width: 850px) {
+  /* HEADER */
+  .header {
+    max-width: 850px;
+  }
+  .header-container .top-header {
+    max-width: 600px;
+    padding-left: 0px;
+  }
+  .header-container .bottom-header {
+    max-width: 600px;
+  }
+  .header-container .bottom-header .nav {
+    max-width: 600px;
+  }
+  .header-container .bottom-header .nav .nav-list {
+    max-width: 600px;
+  }
+  /*Footer*/
+  .footer {
+    max-width: 850px;
+  }
+  .footer-container {
+    max-width: 600px;
   }
 }
 /*# sourceMappingURL=style.css.map */
