--- a/songbird/style.css
+++ b/songbird/style.css
@@ -40,7 +40,6 @@ body {
           align-items: center;
   background-color: #AABCC5;
   color: #000;
-  border: 1px solid red;
 }
 
 /* HEADER */
@@ -49,7 +48,6 @@ body {
   max-width: 1600px;
   width: 100%;
   margin: 0 auto;
-  border: 2px solid blue;
 }
 
 .header-container {
@@ -190,7 +188,6 @@ body {
   max-width: 1600px;
   width: 100%;
   min-height: 80px;
-  border: 1px solid red;
 }
 
 .footer-container {
@@ -376,11 +373,9 @@ body {
   .header {
     max-width: 650px;
     height: 240px;
-    border: 2px solid green;
   }
   .header-container .top-header {
     max-width: 400px;
-    border: 2px solid violet;
   }
   .header-container .top-header .logo {
     width: 120px;
@@ -393,7 +388,6 @@ body {
   .header-container .bottom-header {
     max-width: 400px;
     height: 200px;
-    border: 2px solid blue;
   }
   .header-container .bottom-header .nav {
     max-width: 600px;
@@ -422,6 +416,59 @@ body {
   .footer-container .rss-link {
     width: 90px;
     height: 45px;
+  }
+}
+
+/*MEDIA MAX-WIDTH: 450px*/
+@media (max-width: 450px) {
+  /* HEADER */
+  .header {
+    max-width: 450px;
+    height: 220px;
+  }
+  .header-container .top-header {
+    max-width: 320px;
+  }
+  .header-container .top-header .logo {
+    width: 100px;
+    height: 30px;
+    margin-top: 5px;
+  }
+  .header-container .top-header h5 {
+    width: 140px;
+    font-size: 16px;
+  }
+  .header-container .bottom-header {
+    max-width: 320px;
+    height: 200px;
+  }
+  .header-container .bottom-header .nav {
+    max-width: 450px;
+  }
+  .header-container .bottom-header .nav .nav-list {
+    max-width: 450px;
+  }
+  /*Footer*/
+  .footer {
+    max-width: 450px;
+    min-height: 50px;
+  }
+  .footer-container {
+    max-width: 320px;
+  }
+  .footer-container .github-link {
+    width: 45px;
+    height: 18px;
+    margin-top: 5px;
+  }
+  .footer-container .year {
+    font-size: 15px;
+    font-weight: 500;
+  }
+  .footer-container .rss-link {
+    width: 70px;
+    height: 40px;
+    margin-top: 5px;
   }
 }
 /*# sourceMappingURL=style.css.map */
