--- a/songbird/style.scss
+++ b/songbird/style.scss
@@ -38,7 +38,7 @@ body {
     @extend %body;
     background-color: $color-gray;
     color: #000;
-    border: 1px solid red;
+    // border: 1px solid red;
 }
 
 /* HEADER */ 
@@ -48,7 +48,7 @@ body {
     width: 100%;
     margin: 0 auto;
     // background-color: #000;
-    border: 2px solid blue;
+    // border: 2px solid blue;
 }
 
 .header-container {
@@ -151,7 +151,7 @@ body {
     max-width: 1600px;
     width: 100%;
     min-height: 80px;
-    border: 1px solid red;
+    // border: 1px solid red;
 }
 
 .footer-container {
@@ -362,13 +362,13 @@ body {
     .header {
         max-width: 650px;
         height: 240px;
-        border: 2px solid green;
+        // border: 2px solid green;
     }
 
     .header-container {
         .top-header {
             max-width: 400px;
-            border: 2px solid violet;
+            // border: 2px solid violet;
             .logo {
                 width: 120px;
                 height: 30px;
@@ -381,7 +381,7 @@ body {
         .bottom-header {
             max-width: 400px;
             height: 200px;
-            border: 2px solid blue;
+            // border: 2px solid blue;
             .nav {
                 max-width: 600px;
                 .nav-list {
@@ -414,6 +414,67 @@ body {
         .rss-link {
             width: 90px;
             height: 45px;
+        }
+    }
+}
+
+/*MEDIA MAX-WIDTH: 450px*/
+@media (max-width: 450px) {
+
+    /* HEADER */ 
+    .header {
+        max-width: 450px;
+        height: 220px;
+        // border: 2px solid green;
+    }
+
+    .header-container {
+        .top-header {
+            max-width: 320px;
+            .logo {
+                width: 100px;
+                height: 30px;
+                margin-top: 5px;
+            }
+            h5 {
+                width: 140px;
+                font-size: 16px;
+            }
+        }
+        .bottom-header {
+            max-width: 320px;
+            height: 200px;
+            .nav {
+                max-width: 450px;
+                .nav-list {
+                    max-width: 450px;
+                }
+            }
+        }
+    }
+
+    /*Footer*/
+    .footer {
+        max-width: 450px;
+        min-height: 50px;
+    }
+
+    .footer-container {
+        max-width: 320px;
+        .github-link {
+            width: 45px;
+            height: 18px;
+            margin-top: 5px;
+        }
+        .year {
+            font-size: 15px;
+            font-weight: 500;
+            // border: 1px solid red;
+        }
+        .rss-link {
+            width: 70px;
+            height: 40px;
+            margin-top: 5px;
         }
     }
 }
