--- a/songbird/style.css
+++ b/songbird/style.css
@@ -221,7 +221,7 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   background-color: #4b4d4e;
-  border: 1px solid green;
+  border-radius: 15px;
 }
 
 .quiz-container .block-question .bird-img {
@@ -276,6 +276,38 @@ body {
 
 .quiz-container .block-question .card-list .item__audio-player .time-bar {
   position: relative;
+}
+
+.quiz-container .block-answer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 10px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.quiz-container .block-answer .block-values {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: calc((100% - 20px) / 2);
+  background-color: #4b4d4e;
+  border-radius: 15px;
+}
+
+.quiz-container .block-answer .block-about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: calc((100% - 20px) / 2);
+  background-color: #4b4d4e;
+  border-radius: 15px;
 }
 
 .play-btn {
