--- a/songbird/style.css
+++ b/songbird/style.css
@@ -284,6 +284,7 @@ body {
   display: flex;
   max-width: 1400px;
   width: 100%;
+  height: 385px;
   margin: 0 auto;
   margin-top: 20px;
   padding: 10px;
@@ -296,9 +297,39 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: calc((100% - 20px) / 2);
   background-color: #4b4d4e;
-  border-radius: 15px;
+}
+
+.quiz-container .block-answer .block-values .values-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  list-style: none;
+}
+
+.quiz-container .block-answer .block-values .values-list .list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 60px;
+  padding-left: 20px;
+  font-size: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+  border: 1px solid gray;
+  cursor: pointer;
 }
 
 .quiz-container .block-answer .block-about {
