--- a/songbird/style.css
+++ b/songbird/style.css
@@ -271,7 +271,6 @@ body {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   cursor: pointer;
-  border: 1px solid red;
 }
 
 .quiz-container .block-question .card-list .item__audio-player .time-bar {
@@ -286,7 +285,7 @@ body {
   width: 100%;
   height: 385px;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 10px;
   padding: 10px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -321,7 +320,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 60px;
+  height: 62px;
   padding-left: 20px;
   font-size: 20px;
   -webkit-box-align: center;
@@ -378,6 +377,25 @@ body {
   display: none;
 }
 
+.quiz-container .next-btn {
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+  height: 50px;
+  margin-left: 10px;
+  font-size: 20px;
+  color: #d6d3d3;
+  background-color: #4b4d4e;
+  border: none;
+}
+
+.quiz-container .next-btn:hover {
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  color: #58A9A5;
+}
+
 .play-btn {
   width: 40px;
   height: 40px;
@@ -389,7 +407,6 @@ body {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   cursor: pointer;
-  border: 1px solid red;
 }
 
 .play-btn:hover {
