--- a/songbird/style.scss
+++ b/songbird/style.scss
@@ -174,7 +174,7 @@ body {
         justify-content: space-between;
         background-color: #4b4d4e;
         border-radius: 15px;
-        // border: 1px solid green;
+        // c
         .bird-img {
             width: 200px;
             height: 155px;
@@ -206,7 +206,7 @@ body {
                         background-repeat: no-repeat;
                         transition: 0.5s;
                         cursor: pointer;
-                        border: 1px solid red;
+                        // border: 1px solid red;
                     }
                     // .play-btn:hover {
                         // fill: #000;
@@ -227,7 +227,7 @@ body {
         width: 100%;
         height: 385px;
         margin: 0 auto;
-        margin-top: 20px;
+        margin-top: 10px;
         padding: 10px;
         justify-content: space-between;
         // background-color: #4b4d4e;
@@ -246,7 +246,7 @@ body {
                 list-style: none;
                 .list__item {
                     display: flex;
-                    height: 60px;
+                    height: 62px;
                     padding-left: 20px;
                     font-size: 20px;
                     align-items: center;
@@ -291,6 +291,24 @@ body {
             }
         }
     }
+    .next-btn {
+        max-width: 1400px;
+        width: 100%;
+        margin: 0 auto;
+        height: 50px;
+        margin-left: 10px;
+        // margin-top: 10px;
+        font-size: 20px;
+        color: #d6d3d3;
+        background-color: #4b4d4e;
+        border: none;
+        // border: 1px solid green;
+    }
+    .next-btn:hover {
+        cursor: pointer;
+        transition: 0.5s;
+        color: $color-mint;
+    }
 
 }
 .play-btn {
@@ -303,14 +321,13 @@ body {
     background-repeat: no-repeat;
     transition: 0.5s;
     cursor: pointer;
-    border: 1px solid red;
+    // border: 1px solid red;
 }
 .play-btn:hover {
     width: 50px;
     height: 50px;
     // fill: #000;
     // color: black;
-
 }
 
 /*Footer*/
