--- a/songbird/style.scss
+++ b/songbird/style.scss
@@ -275,13 +275,12 @@ body {
                 padding-left: 20px;
                 font-size: 20px;
                 list-style: none;
-                gap: 20px;
+                gap: 10px;
                 cursor: pointer;
                 transition: 0.5s;
-                .instruction__item-in1:hover,
-                .instruction__item-in2:hover {
-                    color: $color-mint;
-                }
+            }
+            .instruction:hover {
+                color: $color-mint;
             }
             .card-body {
                 display: none;
